@@ -21,7 +21,8 @@
 /* A very simple program that sets a single key value when you type
    it in an entry and press return */
 
-#include <gconf/gconf-client.h>
+#include <gconf-client.h> /* Once GConf is installed, this should be
+                             <gconf/gconf-client.h> */
 #include <gtk/gtk.h>
 
 void
