@@ -20,7 +20,8 @@
 
 /* A very simple program that monitors a single key for changes. */
 
-#include <gconf/gconf-client.h>
+#include <gconf-client.h> /* Once GConf is installed, this should be
+                             <gconf/gconf-client.h> */
 #include <gtk/gtk.h>
 
 void
