@@ -1,3 +1,12 @@
+2000-03-06  Havoc Pennington  <hp@redhat.com>
+
+	* doc/intro-article.sgml: Add the examples
+
+	* examples/simple-view.c: Change include to work before 
+	we install.
+	
+	* examples/simple-controller.c: ditto
+
 2000-02-29  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: Add goofy "--enable-docs" option to bypass all 
